<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/faceVerifyWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/face_verify_privacy_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="28dp"
            android:text="@string/face_verify_tip1"
            android:textColor="@color/faceVerifyDark"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="169dp"
            android:layout_height="169dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/face_verify_scan" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="50dp"
            android:text="@string/face_verify_tip2"
            android:textColor="@color/faceVerifyDark"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/face_verify_tip1"
                android:drawablePadding="1dp"
                android:gravity="center"
                android:text="@string/face_verify_tip3" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/face_verify_tip2"
                android:drawablePadding="1dp"
                android:gravity="center"
                android:text="@string/face_verify_tip4" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/face_verify_tip3"
                android:drawablePadding="1dp"
                android:gravity="center"
                android:text="@string/face_verify_tip5" />
        </LinearLayout>

        <include layout="@layout/face_verify_privacy_item" />

        <Button
            android:id="@id/face_verify_start"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="8dp"
            android:background="@color/faceVerifyBlue"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:text="@string/face_verify_start"
            android:textColor="@color/faceVerifyWhite"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>